--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "motion": "^12.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-carousel": "^4.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
