--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@prisma/client": "^6.12.0",
+    "@prisma/client": "^6.16.2",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.13",
@@ -34,15 +34,28 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.19.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
-    "prisma": "^6.12.0",
+    "prisma": "^6.16.2",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.20.3",
-    "typescript": "^5"
-  }
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2"
+  },
+  "description": "* 🚗 Véhicules * 🏍️ Deux-roues * 🚚 Transport / Location",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mahmoud974/PetitCoinAnnonce.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Mahmoud974/PetitCoinAnnonce/issues"
+  },
+  "homepage": "https://github.com/Mahmoud974/PetitCoinAnnonce#readme"
 }
