--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^2.0.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.1.2",
     "@tabler/icons-react": "^3.30.0",
+    "better-auth": "^1.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "lucide": "^0.476.0",
     "lucide-react": "^0.476.0",
     "motion": "^12.4.7",
-    "next": "15.1.7",
-    "react": "^19.0.0",
+    "next": "^16.1.0",
+    "react": "^19.2.3",
     "react-carousel": "^4.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
@@ -40,7 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
-    "prisma": "^6.16.2",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
