--- a/package.json
+++ b/package.json
@@ -11,24 +11,29 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.1.2",
     "@tabler/icons-react": "^3.30.0",
-    "better-auth": "^1.4.7",
+    "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.4.7",
+    "leaflet": "^1.9.4",
     "lucide": "^0.476.0",
     "lucide-react": "^0.476.0",
     "motion": "^12.4.7",
     "next": "^16.1.0",
+    "pg": "^8.16.3",
     "react": "^19.2.3",
     "react-carousel": "^4.3.0",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
@@ -36,6 +41,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20.19.17",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
@@ -43,7 +49,7 @@
     "postcss": "^8",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.20.5",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.2"
   },
   "description": "* 🚗 Véhicules * 🏍️ Deux-roues * 🚚 Transport / Location",
